# OAI5G-SCS

./: README.md
clienteOAI5g/: CMakeLists.txt
clienteOAI5g/common/utils/time_manager/: time_manager.c
clienteOAI5g/openair2/LAYER2/nr_pdcp/: nr_pdcp_integrity_nia2.c  nr_pdcp_security_nea2.c
clienteOAI5g/openair3/SECU/: CMakeLists.txt  key_nas_deriver.c  secu_defs.c  secu_defs.h  secu_remote_client.cpp
clienteOAI5g/openair3/SECU/cmake/: GrpcProtobufGeneration.cmake
clienteOAI5g/tests/nr-cuup/: load-test.conf  nr-cuup-load-test.c
servidor/: CMakeLists.txt  kdf.c  remote_secu.proto  secu_remote_server.cpp
servidor/cmake/: FindgRPC.cmake
servidor/common/utils/time_manager/: time_manager.c
servidor/nfapi/oai_integration/: vendor_ext.h
